--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  //styles.css is inlined to reduce loading time
   <style>
   /** {
     outline: 1px solid red !important;
@@ -88,6 +89,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
+        //Image has been compressed and size has been reduce
         <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
